--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
   application:
     name: files-service
 management:
+  endpoint:
+    loggers:
+      enabled: true
   endpoints:
     web:
       exposure:
