Adding logs endpoits

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,3 +1,9 @@
+logging:
+  file:
+    name: ./logs/log-file.log
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.client: DEBUG
 server:
   port: 8082
 spring:
